crates/kevin-domain/tests/snapshots/event_snapshots__run.understanding_completed.v1.snap
---
source: crates/kevin-domain/tests/event_snapshots.rs
expression: value
---
{
  "question_ids": [
    "01910000-0000-7000-8000-000000000d01"
  ],
  "type": "run.understanding_completed",
  "understanding": {
    "assumptions": [],
    "complexity": "medium",
    "objective": "Add a /healthz endpoint",
    "proposed_questions": [],
    "risks": [],
    "success_criteria": [
      "GET /healthz returns 200"
    ],
    "suggested_task_kinds": [
      "implement",
      "test"
    ]
  },
  "usage": {
    "cache_read_tokens": 50,
    "cache_write_tokens": 10,
    "cost_usd": "0.25",
    "input_tokens": 1000,
    "output_tokens": 200,
    "wall_ms": 1500
  }
}
