crates/kevin-domain/tests/snapshots/event_snapshots__run.understanding_started.v1.snap
---
source: crates/kevin-domain/tests/event_snapshots.rs
expression: value
---
{
  "planner_route": {
    "effort": "xhigh",
    "model": "opus5-claude",
    "worker": "claude"
  },
  "type": "run.understanding_started"
}
