crates/kevin-domain/tests/snapshots/event_snapshots__task.attempt_failed.v1.snap
---
source: crates/kevin-domain/tests/event_snapshots.rs
expression: value
---
{
  "attempt_id": "01910000-0000-7000-8000-000000000c01",
  "class": "transient",
  "message": "transient failure",
  "retry_possible": true,
  "type": "task.attempt_failed",
  "usage": {
    "cache_read_tokens": 50,
    "cache_write_tokens": 10,
    "cost_usd": "0.25",
    "input_tokens": 1000,
    "output_tokens": 200,
    "wall_ms": 1500
  }
}
