crates/kevin-domain/tests/snapshots/event_snapshots__task.cancelled.v1.snap
---
source: crates/kevin-domain/tests/event_snapshots.rs
expression: value
---
{
  "reason": "run cancelled",
  "type": "task.cancelled"
}
