crates/kevin-domain/tests/snapshots/event_snapshots__task.created.v1.snap
---
source: crates/kevin-domain/tests/event_snapshots.rs
expression: value
---
{
  "budget": {
    "max_attempts": 2,
    "max_parallel": 4,
    "max_tokens": null,
    "max_usd": "10.0",
    "max_wall": null
  },
  "kind": "implement",
  "run_id": "01910000-0000-7000-8000-0000000000a1",
  "spec": {
    "acceptance_criteria": [
      "GET /healthz returns 200"
    ],
    "allow_push": false,
    "instructions": "Add the route and a test.",
    "optional": false,
    "parallel_safe": true,
    "title": "Implement /healthz",
    "workspace_policy": "isolated"
  },
  "task_id": "01910000-0000-7000-8000-000000000b01",
  "type": "task.created"
}
